Fixed h6 size on mobile

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -840,7 +840,10 @@ h6 {
     font-size: 1.66667em; }
 
   h5 {
-    font-size: 1.33333em; } }
+    font-size: 1.33333em; }
+
+  h6 {
+    font-size: 1em; } }
 /* ==========================================================================
    Body copy
    ========================================================================== */
