--- a/assets/stylesheets/partials/_typography.scss
+++ b/assets/stylesheets/partials/_typography.scss
@@ -57,6 +57,7 @@ h6 { font-size: $base-font-unit; }
     h3 { font-size: em(36, $base-font-unit); }
     h4 { font-size: em(30, $base-font-unit); }
     h5 { font-size: em(24, $base-font-unit); }
+    h6 { font-size: em(18, $base-font-unit); }
 }
 
 /* ==========================================================================
